# unicode-properties

./: .darcs-boring  .gitignore  DerivationData.m4  Makefile  stack.yaml  unicode-properties.cabal
Data/Char/: Properties.hs
Data/Char/Properties/: .gitignore  BidiCategoryData.hs.m4  Case.hs  CaseData.hs.m4  DecompositionData.hs.m4  Derivation.hs.m4  GeneralCategory.hs  GeneralCategoryData.hs.m4  GeneralCategoryTypes.hs  Misc.hs  MiscData.hs.m4  NamesData.hs.m4  PrivateData.hs.m4  SpecialCasing.m4  Version.hs
names/: Makefile  unicode-names.cabal
names/Data/Char/Properties/: NamesData.hs.m4
unicode-names/: Makefile  package.yaml  unicode-names.cabal
unicode-names/lib/Data/Char/Properties/: .gitignore  Names.hs  NamesData.hs.m4
unicode-properties/: .gitignore  DerivationData.m4  Makefile  PropList.m4  package.yaml  unicode-properties.cabal
unicode-properties/Data/Char/: Properties.hs
unicode-properties/Data/Char/Properties/: BidiCategory.hs  Case.hs  Decomposition.hs  GeneralCategoryTypes.hs  Misc.hs
unicode-properties/lib/Data/Char/Properties/: BidiCategoryData.hs.m4  BidiCategoryTypes.hs  CaseData.hs.m4  DecompositionData.hs.m4  DecompositionTypes.hs  Derivation.hs.m4  GeneralCategory.hs  GeneralCategoryData.hs.m4  MiscData.hs.m4  PrivateData.hs.m4  Version.hs
