name:	unicode-properties
version: 0.1
build-depends:
	base,
	containers>=0.1,
	array>=0.1
build-type: Simple
extensions:
exposed-modules:
	Data.Char.Properties.GeneralCategory
	Data.Char.Properties.BidiCategory
	Data.Char.Properties.Case
	Data.Char.Properties.Misc
	Data.Char.Properties.Decomposition
	Data.Char.Properties.Names
	Data.Char.Properties
other-modules:
	Data.Char.Properties.GeneralCategoryData
	Data.Char.Properties.GeneralCategoryTypes
	Data.Char.Properties.BidiCategoryData
	Data.Char.Properties.BidiCategoryTypes
	Data.Char.Properties.CaseData
	Data.Char.Properties.MiscData
	Data.Char.Properties.DecompositionData
	Data.Char.Properties.DecompositionTypes
	Data.Char.Properties.NamesData
	Data.Char.Properties.PrivateData
